# searchdb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-THIRD-PARTY  README.md
.claude/: settings.json
.dsrch/fda/: searchdb.json
.dsrch/fda/index/: .managed.json  meta.json
.github/workflows/: release.yml
docs/: business-model.md  product-requirements.md
docs/getting-started/: concepts.md  quickstart.md
docs/guides/: compaction.md  schema.md  searching.md
docs/plans/: 2026-03-23-searchdb-rust-mvp.md
docs/research/: 2026-03-24-quickwit-components.md
docs/superpowers/plans/: 2026-03-24-delta-as-buffer.md  2026-03-24-es-dsl.md  2026-03-24-schema-inference.md  2026-03-24-tiered-compaction.md  2026-03-25-ingest.md  2026-03-28-dewey-rebrand-cli.md
docs/superpowers/specs/: 2026-03-24-buffer-promote-architecture-design.md  2026-03-24-es-dsl-design.md  2026-03-24-schema-inference-design.md  2026-03-24-tiered-compaction-design.md  2026-03-25-ingest-design.md
src/: compact.rs  delta.rs  error.rs  ingest.rs  main.rs  merge_policy.rs  object_store_dir.rs  pipeline.rs  schema.rs  searcher.rs  storage.rs  writer.rs
src/commands/: compact.rs  connect_delta.rs  drop.rs  get.rs  index.rs  ingest.rs  mod.rs  new_index.rs  reindex.rs  search.rs  stats.rs  sync.rs
src/es_dsl/: bool_query.rs  exists_query.rs  match_phrase.rs  match_query.rs  mod.rs  multi_match_query.rs  one_field_map.rs  prefix_query.rs  range_query.rs  term_query.rs  terms_query.rs  wildcard_query.rs
