[package]
name = "deltasearch"
version = "0.1.0"
edition = "2021"
description = "ES in your pocket — embedded search backed by tantivy + Delta Lake"
license = "Apache-2.0"
repository = "https://github.com/ericsson-colborn/searchdb"

[[bin]]
name = "dsrch"
path = "src/main.rs"

[dependencies]
# Search engine
tantivy = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Delta Lake
deltalake = { version = "0.25", features = ["datafusion", "azure", "s3", "gcs"], optional = true }

# Arrow / Parquet (for reading Delta files)
arrow = { version = "54", optional = true }
parquet = { version = "54", optional = true }

# Arrow format readers for ingest
arrow-csv = { version = "54", optional = true }
arrow-json = { version = "54", optional = true }

# Glob pattern expansion for ingest
glob = { version = "0.3", optional = true }

# Async trait (needed for tantivy's FileHandle trait)
async-trait = "0.1"

# Async runtime (delta-rs is async)
tokio = { version = "1", features = ["full"], optional = true }

# HTTP serve
axum = { version = "0.8", optional = true }

# Object storage (S3, GCS, Azure, local) — re-uses the version from deltalake
object_store = { version = "0.11", optional = true }

# Byte buffers (needed for Parquet ChunkReader from object_store bytes)
bytes = { version = "1", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = "0.4"


# UUID generation for doc IDs
uuid = { version = "1", features = ["v4"] }
regex = "1"

# URL parsing for object store URIs
url = "2"

# Bounded channels for parallel pipeline
crossbeam-channel = "0.5"
prometheus = { version = "0.13", optional = true }

[features]
default = ["delta"]
delta = ["dep:deltalake", "dep:arrow", "dep:parquet", "dep:tokio", "dep:glob", "dep:arrow-csv", "dep:arrow-json", "dep:object_store", "dep:bytes"]
serve = ["dep:axum", "dep:tokio"]
metrics = ["dep:prometheus", "dep:axum", "dep:tokio"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
